# lumina

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  biome.json  docker-compose.dockerhub.yml.example  docker-compose.yml  docker-compose.yml.example  initial.md  trd-optimized.md  trd.md
backend/: .dockerignore  AGENTS.md  Dockerfile  ai_client.py  alembic.ini  article_service.py  auth.py  main.py  media_service.py  models.py  pyproject.toml  requirements.txt  slug_utils.py  task_errors.py  task_state.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 20260210_0000_schema_baseline.py  20260210_0001_index_governance.py  20260210_0002_legacy_cleanup.py  20260211_0003_seed_default_prompts.py  20260212_0004_guest_read_perf_indexes.py  20260212_0005_ai_usage_chunk_columns.py  20260212_0006_ai_advanced_cleaning_options.py  20260318_0007_article_note_recommendation_level.py  20260319_0008_article_tags.py  20260322_0009_article_title_translation.py  20260325_0010_ai_infographic.py  20260326_0011_ai_infographic.py  20260326_0011_refine_infographic_prompt_brief.py  20260326_0012_rss_toggle_and_infographic_image.py  20260331_0013_drop_prompt_response_format.py  (+5 more)
backend/app/: main.py
backend/article_database_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/docs/: cli.md  runtime-settings.md
backend/scripts/: backfill_original_language.py  check_response_contract.py  check_route_coverage.py  migrate_db.py  response_contract_baseline.json  route_contract_baseline.json
backend/tests/: conftest.py
(+272 files in other folders)
