[project]
name = "article-database-backend"
version = "1.0.0"
description = "文章知识库系统后端API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "openai==1.3.7",
    "httpx==0.25.2",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "Pillow==10.3.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "PyJWT==2.8.0",
    "python-slugify[unidecode]==8.0.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "models", "ai_client", "article_service", "auth", "slug_utils", "media_service"]
